--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,6 +22,7 @@
 
 
     <script src="../js/jquery.min.js"></script>
+    <script src="../js/scrollbooster.min.js"></script>
     <script src="../js/jquery.fn.gantt.js"></script>
     <script src="../js/data.js"></script>
 
@@ -31,26 +32,31 @@
 
         $('.gantt').gantt({
           source: data,
-          scale: 'months',
+          scale: 'days',
           minScale: 'days',
           maxScale: 'months',
           navigate: 'scroll',
           itemsPerPage: 20,
           scrollToToday: true,
           dow: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
-          daysScaleCellWidth: 28,
-          weeksScaleCellWidth: 36,
-          monthsScaleCellWidth: 75,
           taskBarHeight: 10,
 
           // callbacks
           onItemClick: function (data) { return; },
           onAddClick: function (dt, rowId) { return; },
           onRender: function () {
+
+            // Adding additional classes
             $('.custom_days .row.date').parent().addClass('custom_DScale_dates');
             $('.custom_days .row.day').parent().addClass('custom_DScale_days');
+
+            // Reappending pseudo grid to elements
             $('.row.day').find('.custom_grid').remove();
             $('.row.day').append('<div class="custom_grid"></div>');
+
+            // Fixing Borders
+            jQuery('.row.year:last, .row.day:last, .row.month:last, .row.date:last').css({'border-right': 'none'});
+
           }
         });
 
