hint fix + text overflow fix

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
       $(function() {
 
         $('.gantt').gantt({
-          source: data,
+          source: altSource,
           scale: 'days',
           minScale: 'days',
           maxScale: 'months',
